work/5d/1e76bea0cb087be55596540143d01f/.command.err
  File "/cluster/home/ayocca/03_RGE/12_reads2pav/readstopav/bin/calc_pav.py", line 3
    as
     ^
SyntaxError: invalid syntax
